--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "expo": "^50.0.17",
+    "expo-av": "^13.10.6",
+    "expo-camera": "^14.1.3",
+    "expo-location": "~16.5.3",
+    "expo-notifications": "^0.27.7",
+    "expo-secure-store": "^12.8.1",
+    "expo-video-thumbnails": "^7.9.0",
     "react": "18.2.0",
     "react-native": "0.74.1"
   },
